<resources>
    <string name="app_name">Body Frame</string>
    <string name="app_name_first_half_capitalized">BODY</string>
    <string name="app_name_second_half_capitalized">FRAME</string>
    <string name="forgot_password">Forgot your password? <b>Click here.</b></string>
    <string name="sign_up">Invited by Trainer? <b>Register now.</b></string>
    <string name="enter_credentials">Please enter your credentials.</string>
    <string name="enter_email_address">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="admin_panel_header">Admin Panel</string>
    <string name="send_message">Send a message</string>
    <string name="sex">Gender</string>
    <string name="goal">Goal</string>
    <string name="weight">lbs</string>
    <string name="height">Height</string>
    <string name="assign_task">Assign a Task</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="workout">Workouts</string>
    <string name="meal">Meals</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="edit_profile">Edit my profile</string>
    <string name="clients">My Clients</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="invitation_code">Please enter your invitation code below</string>
    <string name="personal_details">Please enter your personal details.</string>
    <string name="full_name">Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_button">Continue</string>
    <string name="back_button">Back</string>
    <string name="finish_button">Finish</string>
    <string name="trainer_invite_button">Trainer invited me</string>
    <string name="already_have_account">Already have an account? Login now.</string>
    <string name="add_task">Add this Task</string>
    <string name="description">Description</string>
    <string name="task_name">Task Name</string>
    <string name="task_type">Task Type</string>
    <string name="task_time">Time</string>
    <string name="calories">Calories</string>
    <string name="mark_done">Mark as Done</string>
    <string name="continue_to_payment">Continue to payment</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Please enter your email address</string>
    <string name="goal_details">Tell the trainer more about you.</string>
    <string name="sex_select">I am:</string>
    <string name="goal_select">I want to:</string>
    <string name="weight_select">Weight:</string>
    <string name="height_select">Height:</string>
    <string name="bank_information">Please enter your Bank Account details.</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="cvv">CVV</string>
    <string name="invite">Invite a new client</string>
    <string name="update_button">Update</string>
    <string name="client_list">Client List</string>
    <string name="text_here">Text here</string>
    <string name="check">Check him</string>
    <string name="monday">MO</string>
    <string name="tuesday">TU</string>
    <string name="wednesday">WE</string>
    <string name="thursday">TH</string>
    <string name="friday">FR</string>
    <string name="saturday">SA</string>
    <string name="sunday">SU</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="support_message">Questions, Concers, or feedback please email support directly:</string>
    <string name="support_email"><b>support@bodyframe.app</b></string>
    <string name="admin_add">Add Administrator</string>
    <string name="admin_comp">Give users free access</string>
    <string name="register">New Trainer? <b>Register now.</b></string>

    <string-array name="sex_dropdown">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="goal_dropdown">
        <item>Gain Muscles</item>
        <item>Lose Weight</item>
    </string-array>

    <string-array name="faq_recycler_view">
        <item>Why was this app designed?;I saw a need to help trainers connect with clients and this was born.</item>
        <item>Who developed this app?;Suite Twenty Four</item>
    </string-array>
</resources>
