<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_app_name_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_first_half_capitalized"
            android:fontFamily="@font/app_default"
            android:textColor="@color/text_blue"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView_app_name_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/app_default"
            android:text="@string/app_name_second_half_capitalized"
            android:textColor="@color/text_white"
            android:paddingTop="100dp"
            android:paddingBottom="100dp"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_Enter_Credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:text="@string/enter_credentials"/>

    <EditText
        android:id="@+id/editText_Username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:alpha="0.60"
        android:background="@drawable/edit_text_rounded"
        android:drawableLeft="@drawable/envelope_icon"
        android:drawablePadding="10sp"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_white"
        android:textSize="15sp"
        android:textColorHint="@color/text_white" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:alpha="0.60"
        android:background="@drawable/edit_text_rounded"
        android:drawableLeft="@drawable/hide_icon"
        android:drawablePadding="10sp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/text_white"
        android:textSize="15sp"
        android:textColorHint="@color/text_white" />

    <Button
        android:id="@+id/button_payment_button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/button_rounded_active"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/text_white"
        android:text="@string/continue_to_payment" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/button_rounded_inactive"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/text_white"
        android:text="@string/back_button" />

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:text="@string/already_have_account" />
</LinearLayout>