<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_app_name_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_first_half_capitalized"
                android:fontFamily="@font/app_default"
                android:textColor="@color/text_blue"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView_app_name_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/app_default"
                android:text="@string/app_name_second_half_capitalized"
                android:textColor="@color/text_white"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="40sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_Enter_Credentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/enter_credentials" />

        <EditText
            android:id="@+id/editText_Username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.60"
            android:background="@drawable/edit_text_rounded"
            android:drawableLeft="@drawable/envelope_icon"
            android:drawablePadding="10sp"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_white"
            android:textSize="15sp"
            android:textColorHint="@color/text_white" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.60"
            android:background="@drawable/edit_text_rounded"
            android:drawableLeft="@drawable/hide_icon"
            android:drawablePadding="10sp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/text_white"
            android:textSize="15sp"
            android:textColorHint="@color/text_white" />

        <Button
            android:id="@+id/button_Login"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/button_rounded_active"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/login_button"
            android:textColor="@color/text_white" />

        <TextView
            android:id="@+id/textView_Forgot_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:text="@string/forgot_password" />

        <TextView
            android:id="@+id/textView_Register"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:text="@string/register" />

        <TextView
            android:layout_marginTop="120dp"
            android:id="@+id/textView_Sign_Up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:text="@string/sign_up" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>