<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_panel_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/admin_panel_header"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/text_white" />

        <Button
            android:id="@+id/button2"
            android:layout_margin="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_active"
            android:text="@string/admin_comp" />

        <Button
            android:id="@+id/button3"
            android:layout_margin="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_active"
            android:text="@string/admin_add" />

        <Button
            android:id="@+id/button_logout"
            android:layout_margin="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_active"
            android:text="@string/logout" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>