<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_task"
        android:layout_width="wrap_content"
        android:layout_height="278dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textColor="@color/text_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_time"
                android:textColor="@color/text_white" />

            <TextView
                android:id="@+id/textView_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textColor="@color/text_white" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textColor="@color/text_white" />

    <Button
        android:id="@+id/button_mark_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:background="@color/button_inactive"
        android:text="@string/mark_done" />
</LinearLayout>